--- a/LaTeX-Cheatsheet/TikZ-Demo.tex
+++ b/LaTeX-Cheatsheet/TikZ-Demo.tex
@@ -131,6 +131,21 @@ on the circles to (0, 0).
 \end{tikzpicture}
 
 % =============================================================================
+\section{Draw rectangles}
+% =============================================================================
+
+\begin{tikzpicture}
+  \node[
+    rectangle,
+    draw=blue,  % border color
+    text=red,   % text color
+    fill = green!30!yellow, % fill-in color
+    minimum width = 3cm,
+    minimum height = 2cm
+  ] (r) at (0,0) {Rectangle 1};
+\end{tikzpicture}
+
+% =============================================================================
 \section{Filling shades of color}
 % =============================================================================
 
